[project]
name = "db-module"
version = "0.1.1"
description = "Minor DB Utilities"
readme = "README.md"
authors = [
    { name = "Tudor Huza", email = "huzatudor@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy-utils>=0.41.2",
    "sqlmodel>=0.0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = [
  "."
]
[tool.ruff]
line-length = 120

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
